--- a/Style.css
+++ b/Style.css
@@ -254,7 +254,7 @@ section{
 }
 
 .btn-color-2:hover{
-    border: rgb(255, 255, 255)0.1rem solid;
+    border: rgb(255, 255, 255) 0.1rem solid;
 }
 
 .btn-container {
@@ -279,7 +279,7 @@ section{
 }
 
 .about-containers,
-.about-details-container{
+.about-details-container {
     display: flex;
 }
 
@@ -288,8 +288,18 @@ section{
 }
 
 .arrow{
-    position:absolute;
-    right: -5rem;
+    position: absolute;
+    right:-5rem;
     bottom: 2.5rem;
 }
 
+.details-container{
+    padding:1.5rem;
+    flex: 1;
+    background-color: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+
+}
