--- a/Style.css
+++ b/Style.css
@@ -263,7 +263,7 @@ section{
 
 /*ABOUT SECTION*/
 
-#about{
+#About{
     position: relative;
 }
 
@@ -287,10 +287,13 @@ section{
     border-radius: 2rem;
 }
 
-.arrow{
+.icon_arrow {
     position: absolute;
-    right:-5rem;
+    right: -5rem;  
     bottom: 2.5rem;
+    width: 50px; 
+    height: auto;
+    cursor: pointer;
 }
 
 .details-container{
@@ -301,5 +304,21 @@ section{
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     text-align: center;
+}
 
+.section-container{
+    gap: 4rem;
+    height: 80%;
+}
+
+.section_pic-container{
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+/*Experience Section*/
+
+#Experience{
+    position: relative;
 }
