--- a/Style.css
+++ b/Style.css
@@ -322,3 +322,126 @@ section{
 #Experience{
     position: relative;
 }
+
+.experience-sub-title{
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.experience-details-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container{
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+.article{
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+.article-icon{
+    cursor:default;
+}
+
+/*Projects Section*/
+
+#Projetcts{
+    position: relative;
+    justify-content: center;
+}
+
+.color-container{
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img{
+    border-radius: 2rem;
+    width: 60%;
+    height: 60%;
+}
+
+.project-title{
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn{
+    color: black;
+    border-color: rgb(163, 163, 163);
+
+}
+
+.about-containers{
+    display: flex;
+    align-self: center;
+    height: 50%;
+    width: 50%;
+}
+
+/*Contact Page*/
+
+#Contact{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5 rem;
+}
+
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container-p{
+    font-size: larger;
+}
+
+.contact-icon{
+    cursor:default;
+}
+
+.contact{
+    cursor: default;
+}
+
+.email-icon{
+    height: 2.5rem;
+}
+
+/*Footer Section*/
+
+footer{
+    height: 25vh;
+    margin: 0 1rem;
+}
+
+footer p{
+    text-align: center;
+}
