--- a/Style.css
+++ b/Style.css
@@ -357,9 +357,8 @@ section{
 
 /*Projects Section*/
 
-#Projetcts{
+#Projects{
     position: relative;
-    justify-content: center;
 }
 
 .color-container{
